Bug 96042 - [HELP UI] tab index in help browser does not show pages
Summary: [HELP UI] tab index in help browser does not show pages
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.0.1
Keywords: bibisectRequest, regression
: 96150 96255 (view as bug list)
Depends on:
Blocks: HelpGaps-NewFeatures
  Show dependency treegraph
 
Reported: 2015-11-24 14:33 UTC by tagezi
Modified: 2016-10-25 19:11 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot (91.32 KB, image/png)
2015-11-24 14:33 UTC, tagezi
Details
Index tab in local help (113.64 KB, image/png)
2015-12-08 17:53 UTC, Jean-Baptiste Faure
Details
Find tab in the local help (142.25 KB, image/png)
2015-12-08 17:56 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tagezi 2015-11-24 14:33:23 UTC
Created attachment 120765 [details]
Screenshot

Kubuntu 14.04
LibreOffice 5.1.0.0.alpha1+
Build ID: f6bc5b79c31225c02e9500d0ced4bd26f998f82b
Threads 4; Ver: 3.16; Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-11-24_01:06:28

Also I have this in my build, made for testing the Help.

1. Open the help browser (Help -> LibreOfficeDev Help or press F1)
2. go to the Index tab
3. double click on any key-words

All pages are shown as empty.
If you go to the tab Content and play there, you will see that help pages exist, but are not show in the Index tab.
Comment 1 V Stuart Foote 2015-11-24 17:36:08 UTC
Confirmed, noticed this yesterday on Windows TB62 builds of master with en-US help file installed.
Comment 2 V Stuart Foote 2015-11-28 06:39:43 UTC
On Windows 10 Pro 64-bit en-US with
Version: 5.2.0.0.alpha0+ (x64)
Build ID: e963e4788d4d4a493e02d3f6c4b1024f3091c502
Threads 8; Ver: Windows 6.19; Render: GL; 

TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-11-27_23:58:30
Locale: en-US (en_US)

The WikiHelp TOC and help segments are there, but the Index, Find and bookmarking have all dropped out.


@Kendy, this is the issue I was mentioning during the Hangout today.
Comment 3 tagezi 2015-11-28 14:33:43 UTC
(In reply to V Stuart Foote from comment #2)
> The WikiHelp TOC and help segments are there, but the Index, Find and
> bookmarking have all dropped out.

Not all. For example: IMSIN, IMSEC and some others can be shown in tabs of the Index and the Find. But I can not find significant difference between them.
Olivier Hallot and I discussed about this bug on the #libreoffice-NPL channel.
Olivier pointed out the error in console "I/O warning : failed to load external entity "vnd.sun.star.zip:/" for pages that can not be shown.
I think that we need to look at this side.
Comment 4 V Stuart Foote 2015-11-30 18:11:42 UTC
*** Bug 96150 has been marked as a duplicate of this bug. ***
Comment 5 Jan Holesovsky 2015-12-01 14:21:59 UTC
Nasty :-(  Any chance to bibisect this - to find out if it is an issue in the code, or in the help itself?

Thank you!
Comment 6 V Stuart Foote 2015-12-02 00:57:36 UTC
Bisect to somewhere in the 64 commits in range 2015-11-14 - 2015-11-16, but nothing jumps out at me.

From TB42 64-bit builds...
  
http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=2faf5622664c322f0516dd2484fc154ae504049a..32d4c03cba399ada807b8ec113a3928aa9e3ff7b
Comment 7 V Stuart Foote 2015-12-02 03:41:03 UTC
(In reply to V Stuart Foote from comment #6)
> Bisect to somewhere in the 64 commits in range 2015-11-14 - 2015-11-16, but
> nothing jumps out at me.
> 
> From TB42 64-bit builds...
>   
> http://cgit.freedesktop.org/libreoffice/core/log/
> ?qt=range&q=2faf5622664c322f0516dd2484fc154ae504049a..
> 32d4c03cba399ada807b8ec113a3928aa9e3ff7b

Sorry, that was -- Clophs TB62 64-bit TDF build system.

s/ TB42 / TB62
Comment 8 riesslibo 2015-12-05 11:18:38 UTC
*** Bug 96255 has been marked as a duplicate of this bug. ***
Comment 9 Peter Maunder 2015-12-07 11:00:01 UTC
Also applies to Locale: en-GB (en_GB.UTF-8) using LibreOfficeDev_5.1.0.0.beta2_Linux_x86_deb_helppack_en-GB with Linux-Mint Mate 17.1. No problem with 5.0.0.3.

I can find the text directly but the index is blank..
Comment 10 Commit Notification 2015-12-08 11:15:33 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4c4999d944bbf8a34f8a320b8de6f4a325bd5d97

tdf#96042: 'std::string::find("something") == 0' means "startsWith()".

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Jan Holesovsky 2015-12-08 11:23:08 UTC
I believe the commit from comment 10 should fix this.  Please check - and if not, reopen the bug.

Stuart: Thanks a lot for the bibisect, helped a lot :-)
Comment 12 Commit Notification 2015-12-08 11:25:06 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=858613fb2fb554c57081f54aea6a0e2782b79aaa&h=libreoffice-5-1

tdf#96042: 'std::string::find("something") == 0' means "startsWith()".

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Jean-Baptiste Faure 2015-12-08 12:02:01 UTC
(In reply to Jan Holesovsky from comment #11)
> I believe the commit from comment 10 should fix this.  Please check - and if
> not, reopen the bug.

Hi Kendy,
Sorry this patch does not fix the bug for LO 5.1.0.0.beta2+ built under Ubuntu 15.10 x86-64 with gcc 5.2.
I did only an incremental build and I will try with a complete rebuild.

Best regards. JBF
Comment 14 Jan Holesovsky 2015-12-08 12:40:24 UTC
Jean-Baptiste: As it is in the helpcompiler, I suspect you need to do some kind of make clean in the help first, incremental build will not help.
Comment 15 Jean-Baptiste Faure 2015-12-08 13:13:45 UTC
(In reply to Jan Holesovsky from comment #14)
> Jean-Baptiste: As it is in the helpcompiler, I suspect you need to do some
> kind of make clean in the help first, incremental build will not help.

You are right, after a make clean && make the display button works as expected in the Find tab. What is weird is that, now, the Index tab is empty and typing something in the "Search term" field does nothing.

Best regards. JBF
Comment 16 Jan Holesovsky 2015-12-08 13:21:08 UTC
Jean-Baptiste: If it is a different problem & the original one is fixed, let's please close this bug, and file a separate one.  Thank you for testing! :-)
Comment 17 Jean-Baptiste Faure 2015-12-08 14:09:14 UTC
(In reply to Jan Holesovsky from comment #16)
> Jean-Baptiste: If it is a different problem & the original one is fixed,
> let's please close this bug, and file a separate one.  Thank you for
> testing! :-)

As far I can see both problems are linked. Indeed if I revert your patch, do make helpcompiler.clean && make then the index tab is not empty.

Best regards. JBF
Comment 18 Jan Holesovsky 2015-12-08 16:11:21 UTC
Jean-Baptiste: Nasty - can please attach screenshot of what you are seeing?  Thank you!
Comment 19 Jean-Baptiste Faure 2015-12-08 17:53:43 UTC
Created attachment 121143 [details]
Index tab in local help

With this screencopy you can see that the index tab is empty.
Comment 20 Jean-Baptiste Faure 2015-12-08 17:56:10 UTC
Created attachment 121144 [details]
Find tab in the local help

On this screencopy, you can see that on 2 lines one is empty.

Both screencopies have been made with a new clean profile.

Best regards. JBF
Comment 21 V Stuart Foote 2015-12-08 22:21:46 UTC
(In reply to Jean-Baptiste Faure from comment #15)
> You are right, after a make clean && make the display button works as
> expected in the Find tab. What is weird is that, now, the Index tab is empty
> and typing something in the "Search term" field does nothing.
> 

On Windows 8.1 Pro 64-bit with
Version: 5.1.0.0.beta2+ (x64)
Build ID: aa30fb5c901ae7700efde5c55e137c8cd42cb230
Threads 8; Ver: Windows 6.29; Render: GL; 

TinderBox: Win-x86_64@62-TDF, Branch:libreoffice-5-1, Time: 2015-12-08_16:32:22
Locale: en-US (en_US)

Confirming the index is empty as described, with no function by the "Display" button. Also, that the search term field returns no results in the index window.

The Find entry field and button is now working as expected (and seems faster). It returns valid find results and displaying them in the panel. The found search terms are highlighted in the help sections displayed in the right panel. That all seems to be correct.

Just the index panel is non-functional--can't tell if the index is being done and just not displayed.
Comment 22 Commit Notification 2015-12-10 22:53:49 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d8c02ffd0f37c946e5a07f1062390714da26b8d0

tdf#96042: Oops, fix a typo.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Jan Holesovsky 2015-12-10 22:54:26 UTC
Now really fixed :-)  Thanks for testing!
Comment 24 Commit Notification 2015-12-10 22:55:40 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=68111c6b8b3d827dba7b35e1b7c84d1bdddd47d6&h=libreoffice-5-1

tdf#96042: Oops, fix a typo.

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 Jean-Baptiste Faure 2015-12-11 05:49:23 UTC
(In reply to Jan Holesovsky from comment #23)
> Now really fixed :-)  Thanks for testing!

Bravo! it works. :-) Verified on Version: 5.1.0.0.beta2+
Build ID: 63bf558b8c504057a1ab879baefd59c2c0a9ce3d
built at home under Ubuntu 15.10 x86-64 with gcc 5.2

Thank you very much.
Best regards. JBF
Comment 26 Robinson Tryon (qubit) 2015-12-17 10:35:23 UTC Comment hidden (obsolete)